bk_ida/gccida/c1/handle_avail_expr
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/handle_avail_expr/src/gcse.c:3939:12: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = ( rtx)v3[2]; 
           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/handle_avail_expr/src/gcse.c:3949:16: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( __int64)v5[1]; 
               ^~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/handle_avail_expr/src/gcse.c:3970:22: error: use of undeclared identifier 'machine_mode'
v18 = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)*fld + 2)); 
                     ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/handle_avail_expr/src/obj/gcse.o] Error 1
